--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsBear2">
+
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"></activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,10 +23,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GoogleFactCheckResponse">
+
+        <activity android:name=".GoogleFactCheckResponse"
+            android:parentActivityName="com.example.newsbear2.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.newsbear2.HomeActivity" />
+        </activity>
+
+        <activity android:name=".WebViewer">
         </activity>
     </application>
 
