Fixed welcome screens and search screen
Welcome screen introduces an optional tutorial. Search screen has a different design.
TODO: Create suggestion buttons.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,12 @@
             android:label="@string/title_language"
             android:theme="@style/Theme.NewsBear2.NoActionBar">
         </activity>
+
+        <activity
+            android:name=".GetStartedActivity"
+            android:label="@string/title_get_started"
+            android:theme="@style/Theme.NewsBear2.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
