--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.textrazor:textrazor:1.0.9'
+    implementation 'com.github.KwabenBerko:News-API-Java:1.0.0'
 }
